# gemini-api-proxy

./: .env.example  .gitignore  Cargo.toml  Dockerfile  GEMINI.md  LICENSE
.github/workflows/: publish-docker.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.sqlx/: query-5779ed228276eb91c9d381156d4fd764c965b3f3716a1e964e556b927fc6c3a7.json  query-5a717d5fd7ab4e4bbe6aa2cb10ab27a8d6d7f1f6a4c777b6ac4e5f4ca6570158.json  query-883719e63396f5dd0a269a746f4566c570019b021b75fc24ddc8e940682e5f08.json  query-9e05d0673fe84d6d67d5612104ecb0da2e1efbea282e5430b742432a9f390158.json  query-c4a39ab19597288a27d33c2db245f6d2224ca5f8ef25f6dfc0f5b86b049afa56.json  query-ee8b99a88be9c8feffce983b97e6761a9490904b8db2a47feac99e56468fb66f.json  query-ff3e785443e65f8b8096e6d44ac63eb9555eb2aa0da8c00170eb8c42c80ad7f1.json
migrations/: 20260213071549_init.sql  20260213085816_create_api_keys_table.down.sql  20260213085816_create_api_keys_table.sql  20260213194101_create_request_logs_table.down.sql  20260213194101_create_request_logs_table.sql  20260303173439_add_name_to_api_keys.down.sql  20260303173439_add_name_to_api_keys.sql
specs/001-project-skeleton-and-db-connectivity/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-api-key-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.rs  errors.rs  lib.rs  main.rs  models.rs  routes.rs
src/middleware/: auth.rs
tests/: auth_check.rs  auth_test.rs  common.rs  health_check.rs  health_test.rs  logging_test.rs  proxy_test.rs  streaming_test.rs
(+31 files in other folders)
