[package]
name = "gemini_api_proxy"
version = "0.1.0"
edition = "2024"

[lib]
name = "gemini_api_proxy"
path = "src/lib.rs"

[dependencies]
actix-web = "4.12.1"
dotenvy = "0.15.7"
env_logger = "0.11.9"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
